--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
                     download
                     href="images//Vinay_Saxena_Resume_06-08-2023-22-21-05.pdf"
                     class="btn btn-primary py-3 px-4"
+                    target="_blank"
                     ><i class="fa fa-download"></i> Resume</a
                   >
                 </p>
@@ -362,7 +363,7 @@
         <div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Our Projects</h2>
+            <h2 class="mb-4">My Projects</h2>
           </div>
         </div>
         <div class="row">
@@ -403,9 +404,41 @@
           <div class="col-md-6">
             <div
               class="project img ftco-animate d-flex justify-content-center align-items-center"
-              style="
-                background-image: url(images/Screenshot\ 2023-10-20\ at\ 16.14.15.png);
-              "
+              style="background-image: url(images/aws.png)"
+            >
+              <div class="overlay"></div>
+              <div class="text text-center p-4">
+                <h3>
+                  <a href="#"
+                    >This project was created during lockdown. Tech stack used
+                    are vanila JavaScript, HTML5 and CSS3 and Reactjs.</a
+                  >
+                </h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div
+              class="project img ftco-animate d-flex justify-content-center align-items-center"
+              style="background-image: url(images/docgpt.png)"
+            >
+              <div class="overlay"></div>
+              <div class="text text-center p-4">
+                <h3>
+                  <a href="#"
+                    >ChatGPT is a natural language processing tool driven by AI
+                    technology that allows you to have human-like conversations
+                    and much more with the chatbot. The language model can
+                    answer questions</a
+                  >
+                </h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div
+              class="project img ftco-animate d-flex justify-content-center align-items-center"
+              style="background-image: url(images/gpt.png)"
             >
               <div class="overlay"></div>
               <div class="text text-center p-4">
