new changes update

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                 ><span>Projects</span></a
               >
             </li>
+            <li class="nav-item">
+              <a href="#Activities" class="nav-link"><span>Activities</span></a>
+            </li>
             <!-- <li class="nav-item">
               <a href="#contact-section" class="nav-link"
                 ><span>Contact</span></a
@@ -196,10 +199,8 @@
                 <p>
                   Hello! I'm a Software Developer with 2 years of experience,
                   primarily focused on ReactJS. I've been actively learning,
-                  collaborating, and improving my skills. Lately, I've developed
-                  an interest in testing frameworks to enhance application
-                  reliability. My goal is constant growth and the creation of
-                  dependable software solutions.
+                  collaborating, and improving my skills.My goal is constant
+                  growth and the creation of dependable software solutions.
                 </p>
                 <ul class="about-info mt-4 px-md-0 px-2">
                   <li class="d-flex">
@@ -252,10 +253,18 @@
         </div>
         <div class="row">
           <div class="col-6 col-md-3 text-center d-flex ftco-animate">
-            <a href="https://html.com/" class="services-1">
+            <a href="https://www.w3schools.com/js/" class="services-1">
               <div class="skill-card">
-                <img src="images/html.svg" alt="" />
-                <h3>HTML</h3>
+                <img src="images/js.svg" alt="" />
+                <h3>JavaScript</h3>
+              </div>
+            </a>
+          </div>
+          <div class="col-6 col-md-3 text-center d-flex ftco-animate">
+            <a href="https://react.dev/" class="services-1">
+              <div class="skill-card">
+                <img src="images/react.svg" alt="" />
+                <h3>ReactJS</h3>
               </div>
             </a>
           </div>
@@ -268,19 +277,10 @@
             </a>
           </div>
           <div class="col-6 col-md-3 text-center d-flex ftco-animate">
-            <a href="https://www.w3schools.com/js/" class="services-1">
+            <a href="https://redux-toolkit.js.org/" class="services-1">
               <div class="skill-card">
-                <img src="images/js.svg" alt="" />
-                <h3>JavaScript</h3>
-              </div>
-            </a>
-          </div>
-
-          <div class="col-6 col-md-3 text-center d-flex ftco-animate">
-            <a href="https://react.dev/" class="services-1">
-              <div class="skill-card">
-                <img src="images/react.svg" alt="" />
-                <h3>ReactJS</h3>
+                <img src="images/primereact-1.svg" alt="" height="100rem" />
+                <h3>Prime React</h3>
               </div>
             </a>
           </div>
@@ -309,14 +309,6 @@
                   height="100rem"
                 />
                 <h3>React Plotly</h3>
-              </div>
-            </a>
-          </div>
-          <div class="col-6 col-md-3 text-center d-flex ftco-animate">
-            <a href="https://redux-toolkit.js.org/" class="services-1">
-              <div class="skill-card">
-                <img src="images/primereact-1.svg" alt="" height="100rem" />
-                <h3>Prime React</h3>
               </div>
             </a>
           </div>
@@ -352,6 +344,14 @@
               <div class="skill-card">
                 <img src="images/office-1-logo-svgrepo-com.svg" alt="" />
                 <h3>MS Office</h3>
+              </div>
+            </a>
+          </div>
+          <div class="col-6 col-md-3 text-center d-flex ftco-animate">
+            <a href="https://html.com/" class="services-1">
+              <div class="skill-card">
+                <img src="images/html.svg" alt="" />
+                <h3>HTML</h3>
               </div>
             </a>
           </div>
@@ -548,7 +548,53 @@
         </div>
       </div>
     </section> -->
-
+    <section class="ftco-section" id="Activities">
+      <div class="container">
+        <div class="row justify-content-center py-5 mt-5">
+          <div class="col-md-12 heading-section text-center ftco-animate">
+            <!-- <h1 class="big big-2">Recreational Activities</h1> -->
+            <h2 class="mb-4">Recreational Activities</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6 col-md-3 text-center d-flex ftco-animate">
+            <a href="#" class="services-1">
+              <div class="skill-card">
+                <img
+                  src="images/travelling-by-airplane-around-the-earth-svgrepo-com (1).svg"
+                  alt=""
+                />
+                <h3>Travelling</h3>
+              </div>
+            </a>
+          </div>
+          <div class="col-6 col-md-3 text-center d-flex ftco-animate">
+            <a href="https://tailwindcss.com/" class="services-1">
+              <div class="skill-card">
+                <img src="images/camera-svgrepo-com.svg" alt="" />
+                <h3>Photography</h3>
+              </div>
+            </a>
+          </div>
+          <div class="col-6 col-md-3 text-center d-flex ftco-animate">
+            <a href="https://www.w3schools.com/js/" class="services-1">
+              <div class="skill-card">
+                <img src="images/cooking-svgrepo-com.svg" alt="" />
+                <h3>Cooking</h3>
+              </div>
+            </a>
+          </div>
+          <div class="col-6 col-md-3 text-center d-flex ftco-animate">
+            <a href="https://react.dev/" class="services-1">
+              <div class="skill-card">
+                <img src="images/blogger-color-svgrepo-com.svg" alt="" />
+                <h3>Blogging</h3>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
     <div id="ftco-loader" class="show fullscreen">
       <svg class="circular" width="48px" height="48px">
         <circle
