--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Vinay'Portfolio</title>
+    <title>Vinay Saxena</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
