--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Vinay Saxena</title>
     <meta charset="utf-8" />
+    <link rel="icon" href="images/imgv4.PNG" />
+
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
