--- a/index.html
+++ b/index.html
@@ -182,14 +182,17 @@
     </section>
 
     <section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
-      <div class="container">
+      <div class="container1">
         <div class="row d-flex">
           <div class="col-md-6 col-lg-5 d-flex">
             <div class="img-about img d-flex align-items-stretch">
               <div class="overlay"></div>
               <div
                 class="img d-flex align-self-stretch align-items-center"
-                style="background-image: url(images/imgv5.PNG)"
+                style="
+                  background-image: url(images/_com.apple.Pasteboard.zn41Dv.PNG);
+                  height: 370px;
+                "
               ></div>
             </div>
           </div>
